Feat: endpoints (#7)
* feat(users): add endpoints

* ci: maj

* docs(users): add doc about CRUD

* fix(players): change about the database

* feat(players): CRUD

* feat(database): remove all except players

* feat(player_par_match): add feat about stat
