# src/users/users.router.ts
@@ -12,8 +12,8 @@ import { verifyJWT } from "../commun/commun.midleware";
 export const userRouter = Router();
 
 userRouter.get("/users", getUsers);
-userRouter.post("/users", createUser);
-userRouter.get("/users/:userId", getUser);
-userRouter.patch("/users/:userId", verifyJWT, updateUser);
-userRouter.delete("/users/:userId", verifyJWT, deleteUser);
-userRouter.post("/users/login", login);
+userRouter.post("/user", createUser);
+userRouter.get("/user/:userId", getUser);
+userRouter.patch("/user/:userId", verifyJWT, updateUser);
+userRouter.delete("/user/:userId", verifyJWT, deleteUser);
+userRouter.post("/user/login", login);
